--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
+    "sass": "^1.52.1",
     "vite": "^2.9.9"
   },
   "lint-staged": {
