--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "highcharts-vue": "^1.4.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
   },
