--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "prepare": "husky install"
+    "preview": "vite preview"
   },
   "dependencies": {
     "highcharts-vue": "^1.4.0",
@@ -21,13 +20,9 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^9.0.1",
-    "husky": "^8.0.1",
-    "lint-staged": "^12.4.1",
+    "highcharts": "^10.1.0",
     "prettier": "^2.6.2",
     "sass": "^1.52.1",
     "vite": "^2.9.9"
-  },
-  "lint-staged": {
-    "*.{js,css,md,vue,json,ts,tsx,jsx}": "prettier --write"
   }
 }
